syntax = "proto3";

package resources.mailer;

import "resources/timestamp/timestamp.proto";
import "resources/users/users.proto";
import "validate/validate.proto";

option go_package = "github.com/fivenet-app/fivenet/gen/go/proto/resources/mailer;mailer";

enum AccessLevel {
  ACCESS_LEVEL_UNSPECIFIED = 0;
  ACCESS_LEVEL_BLOCKED = 1; // UNUSED
  ACCESS_LEVEL_PARTICIPANT = 2;
}

message ThreadAccess {
  repeated ThreadJobAccess jobs = 1 [(validate.rules).repeated.max_items = 20]; // @gotags: alias:"job_access"
  repeated ThreadUserAccess users = 2 [(validate.rules).repeated.max_items = 20]; // @gotags: alias:"user_access"
}

message ThreadJobAccess {}

message ThreadUserAccess {
  uint64 id = 1 [jstype = JS_STRING];
  optional resources.timestamp.Timestamp created_at = 2;
  uint64 target_id = 3 [jstype = JS_STRING]; // @gotags: alias:"thread_id"
  int32 user_id = 4 [(validate.rules).int32.gte = 0];
  optional resources.users.UserShort user = 5;
  AccessLevel access = 6 [(validate.rules).enum.defined_only = true];
}
